Include page content and include / in home url

--- a/Legislation/index.html
+++ b/Legislation/index.html
@@ -5,3 +5,107 @@
   title: Legislation}
 
 ---
+<div class="mainContent">
+							
+		<table cellpadding="4" cellspacing="0" border="0" width="97%">
+				<tr>
+				    <td valign="top" style="padding:0" colspan="3" width="100%">
+				        <div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><br>
+<table style="font-family:calibri;font-size:11pt" border="0" width="700">
+<tbody>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/Irfa"><font color="#000000">Intergovernmental Relations Framework Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/lgmpra"><font color="#000000">Local Government: Municipal Property Rates Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/lgmfma"><font color="#000000">Local Government: Municipal Finance Management Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/lgmsya"><font color="#000000">Local Government: Municipal Systems Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/lgmsta"><font color="#000000">Local Government: Municipal Structures Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/lgmda"><font color="#000000">Local Government: Municipal Demarcation Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/wsa"><font color="#000000">Water Services Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/Ifra"><font color="#000000">Intergovernmental Fiscal Relations Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/cons"><font color="#000000">Constitution, No. 108 of 1996 and local government amendment</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/lgta"><font color="#000000">Local Government: Transition Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/era"><font color="#000000">Electricity Regulation Act</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Legislation/MFPFA"><font color="#000000">Municipal Fiscal Powers and Functions Act (MFPFA)</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"></font></td>
+<td><font color="#000000"> </font></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td><a title="" href="/MFMA/Legislation/Municipal%20Fiscal%20Powers%20and%20Functions%20Act.pdf" target="_blank"><font color="#000000">Municipal Fiscal Powers and Functions Act, No. 12 of 2007</font></a></td></tr></tbody></table></div>
+				    </td>
+				</tr>
+				<tr>
+					<td valign="top" style="padding:0">
+						<table cellpadding="4" cellspacing="0" border="0" width="100%" height="100%">
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+							<tr>
+								<td width="100%" colspan="3" valign="top" style="padding:0">
+									<table cellpadding="4" cellspacing="0" width="100%" height="100%">
+										<tr>
+											<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+											 </td>
+									                                        <td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+																			 </td>
+										</tr>
+									</table>
+								</td>
+							</tr>							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+							</tr>
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+						</table>
+					</td>
+					<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+					 </td>
+				</tr>
+				<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+		</table>
+
+					</div>
