--- a/Media_Releases/index.html
+++ b/Media_Releases/index.html
@@ -5,3 +5,134 @@
   title: Publications and Media Releases}
 
 ---
+<div class="mainContent">
+							
+		<table cellpadding="4" cellspacing="0" border="0" width="97%">
+				<tr>
+				    <td valign="top" style="padding:0" colspan="3" width="100%">
+				        <div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><br>
+<table style="font-family:calibri;font-size:11pt" border="0" width="700">
+<tbody>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"></font></td>
+<td style="width:620px"><a class="BasicTextBold" target="_blank"><font color="#000000" face="Calibri"><strong>Publications</strong></font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/foldernew.gif"></td>
+<td style="width:620px"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><a title="" href="/Media_Releases/ReviewOfLGInfrastructureGrants/Pages/default_final.aspx"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><font color="#000000"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US">Review</span></span> of Local Government Infrastructure Grants</font></span></span></span></span></span></span></span></span></span></span></span></span></span></span></a></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></td>
+<td style="width:50px" class="TextFileSize"></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></td>
+<td style="width:620px"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><a title="" href="/Media_Releases/LGESDiscussions/Pages/default.aspx"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><span style="font-family:'calibri','sans-serif';font-size:11pt" lang="EN-US"><font color="#000000">Local Government Equitable Share Formula Review discussion documents</font></span></span></a></span></span></td>
+<td style="width:50px" class="TextFileSize"></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></td>
+<td style="width:620px"><a class="BasicText" title="" href="http://www.treasury.gov.za/publications/igfr/2011/lg/default.aspx"><font color="#000000" face="Calibri">Local Government Budgets and Expenditure Review 2006/07 - 2012/13</font></a></td>
+<td style="width:50px" class="TextFileSize"></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td style="width:620px"><a class="BasicText" title="" href="http://www.treasury.gov.za/publications/igfr/2008/lg/default.aspx"><font color="#000000" face="Calibri">Local Government Budgets and Expenditure Review 2003/04 - 2009/10</font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td style="width:620px"><font color="#000000" face="Calibri"><font color="#000000" face="Calibri"><a title="" href="/Media_Releases/mbi/Pages/Municipal%20Budgets%20-%20Main%20Page.aspx"><font color="#000000" face="Calibri"><font color="#000000" face="Calibri">Municipal Budget Information</font></font></a></font></font></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td style="width:620px"><a class="BasicText" title="" href="/Media_Releases/s71"><font color="#000000" face="Calibri">Section 71 Information (In-year Management, Monitoring and Reporting)</font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td style="width:620px"><a class="BasicText" title="" href="/Media_Releases/Municipal%20Payment%20Schedule"><font color="#000000" face="Calibri">Municipal Payment Schedule</font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></td>
+<td style="width:620px"><a title="" href="/Media_Releases/The%20state%20of%20local%20government%20finances/Pages/default.aspx"><font color="#000000">The State of Local Government Finances</font></a></td>
+<td style="width:50px" class="TextFileSize"></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></td>
+<td style="width:620px"><a title="" href="/Media_Releases/Reports%20to%20Parliament/Pages/default.aspx"><font color="#000000">Reports to Parliament</font> </a></td>
+<td style="width:50px" class="TextFileSize"></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"></td>
+<td style="width:620px"></td>
+<td style="width:50px" class="TextFileSize"></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"></font></td>
+<td style="width:620px"><font color="#000000" face="Calibri"> </font></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/foldernew.gif"></td>
+<td style="width:620px"><a class="BasicText" title="" href="/Media_Releases/Pages/MunicipalEntitiesJune2014.aspx"><font color="#000000" face="Calibri">Municipal Entities Report as at 30 June 2014</font></a></td>
+<td style="width:50px" class="TextFileSize"></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td style="width:620px"><a class="BasicText" title="" href="/Media_Releases/Pages/MunicipalEntitiesJune2010.aspx"><font color="#000000" face="Calibri">Municipal Entities Report as at 30 June 2010</font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td style="width:620px"><a class="BasicText" title="" href="/MFMA/Publications%20and%20Media%20Releases/Municipal%20Entities%20Report%20as%20at%2030%20June%202006.pdf"><font color="#000000" face="Calibri">Municipal Entities Report as at 30 June 2006</font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri">(68kb)</font></td></tr></tbody></table><br>
+<table style="font-family:calibri;font-size:11pt" border="0" width="700">
+<tbody>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"></font></td>
+<td style="width:620px"><a class="BasicTextBold" target="_blank"><font color="#000000" face="Calibri"><strong>Media Releases</strong></font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td style="width:620px"><a class="BasicText" title="" href="/Media_Releases/Pages/cap_op_exp.aspx"><font color="#000000" face="Calibri">2005/06 Local Government budgets and selected outcomes - 30 June 2006</font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td style="width:620px"><a class="BasicText" title="" href="/Media_Releases/Pages/gov_exp.aspx"><font color="#000000" face="Calibri">2004/05 Local Government budgets and selected outcomes - 1 September 2005</font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri"></font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td style="width:620px"><a class="BasicText" title="" href="/MFMA/Publications%20and%20Media%20Releases/New%20tender%20procedures%20for%20municipalities%20-%205%20June%202005.pdf" target="_blank"><font color="#000000" face="Calibri">New tender procedures for municipalities - 5 June 2005</font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri">(27kb)</font></td></tr>
+<tr valign="top">
+<td style="width:30px" align="center"><font color="#000000" face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td style="width:620px"><a class="BasicText" title="" href="/MFMA/Publications%20and%20Media%20Releases/Media%20Statement%20MFMA.pdf" target="_blank"><font color="#000000" face="Calibri">Modernising financial governance (Launch of MFMA) - 29 June 2004</font></a></td>
+<td style="width:50px" class="TextFileSize"><font color="#000000" face="Calibri">(21kb)</font></td></tr></tbody></table><br></div>
+				    </td>
+				</tr>
+				<tr>
+					<td valign="top" style="padding:0">
+						<table cellpadding="4" cellspacing="0" border="0" width="100%" height="100%">
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+							<tr>
+								<td width="100%" colspan="3" valign="top" style="padding:0">
+									<table cellpadding="4" cellspacing="0" width="100%" height="100%">
+										<tr>
+											<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+											 </td>
+									                                        <td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+																			 </td>
+										</tr>
+									</table>
+								</td>
+							</tr>							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+							</tr>
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+						</table>
+					</td>
+					<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+					 </td>
+				</tr>
+				<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+		</table>
+
+					</div>
