--- a/Pages/MFMALearning/index.html
+++ b/Pages/MFMALearning/index.html
@@ -5,3 +5,102 @@
   title: MFMA Learning}
 
 ---
+<div class="mainContent">
+							
+		<table cellpadding="4" cellspacing="0" border="0" width="97%">
+				<tr>
+				    <td valign="top" style="padding:0" colspan="3" width="100%">
+				        <div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><p><font color="#800000" size="4"><strong></strong></font><font face="Calibri"> </font></p>
+<p align="center"><font face="Calibri"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/head.jpg" width="741" height="54"></font></p>
+<div>
+<table border="0" cellspacing="8" cellpadding="0" width="740" align="center">
+<tbody>
+<tr>
+<td style="padding-top:0px"><font class="HeadingMain"><font color="#8c1603">
+<div style="padding-left:15px"><br>
+<table border="0" width="700">
+<tbody>
+<tr valign="top">
+<td style="width:25%" class="test1" align="middle"><a class="BasicText" href="http://nt.treasury.gov.za/mfmalearning/Login.asp" target="_blank"><font color="#000000" face="Calibri">Learner Login</font></a></td>
+<td style="width:25%" class="test1" align="middle"><a class="BasicText" href="http://nt.treasury.gov.za/mfmalearning/Register.asp" target="_blank"><font color="#000000" face="Calibri">Learner Registration</font></a></td>
+<td style="width:25%" class="test1" align="middle"><a class="BasicText" href="mailto:mfmalearning@treasury.gov.za" target="_blank"><font color="#000000" face="Calibri">Contact Administrator</font></a><font color="#000000" face="Calibri"> </font></td>
+<td style="width:25%" class="test1" align="middle"><a class="BasicText" href="http://nt.treasury.gov.za/mfmalearning/admin/login.asp" target="_blank"><font color="#000000" face="Calibri">Coordinator Login</font></a></td></tr></tbody></table><br>
+<table class="contactsTables" border="0" width="700">
+<tbody>
+<tr class="test1" valign="top">
+<td class="BasicTextBold" align="middle"><font color="#000000" face="Calibri">MFMA Learning : Software Upgrade No 1 of 1</font></td></tr>
+<tr valign="top">
+<td class="BasicTextBold" align="middle"><font color="#000000" face="Calibri"></font></td></tr>
+<tr class="test1" valign="top">
+<td class="BasicText" align="middle"><font color="#000000" face="Calibri">To download this essential upgrade and for instructions on how to install the upgrade</font></td></tr>
+<tr valign="top">
+<td class="BasicTextBold" align="middle"><font color="#000000" face="Calibri"></font></td></tr>
+<tr class="test1" valign="top">
+<td align="middle"><a class="BasicText" title="" href="/Pages/Update.aspx"><font color="#000000" face="Calibri">Click Here</font></a></td></tr>
+<tr valign="top">
+<td class="BasicTextBold" align="middle"><font face="Calibri"></font></td></tr></tbody></table><br>
+<table class="test1" border="0" width="700">
+<tbody>
+<tr valign="top">
+<td style="width:620px" align="middle"><a class="BasicTextBold"><strong><font color="#000000" size="4" face="Calibri">About MFMA learning</font></strong></a></td></tr>
+<tr valign="top">
+<td>
+<ul>
+<li class="test1"><a class="BasicText" title="" href="/MFMA/MFMA%20learning/02%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">02 What is MFMA Learning?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/03%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">03 How much will it cost to undertake the learning?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/04%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">04 What are the topics covered?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/05%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">05 How does MFMA learning link to accredited courses and competency levels?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/06%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">06 Who should undertake MFMA learning?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/07%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">07 How does learning take place and how long does it take to complete?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/08%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">08 How does the learner access the learning material for future reference?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/09%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">09 How is the software installed?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/10%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">10 What computer specifications are required?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/11%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">11 What learner literacy levels are required?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/12%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">12 What support mechanisms are in place for the learner?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/13%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">13 How do learners register for the MFMA Learning programme?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/14%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">14 How do learners continue learning from a different computer?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/15%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">15 How do learners track progress and receive completion certificates?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/16%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">16 How do coordinators track progress?</font></a></li>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/17%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">17 How can education &amp; training providers access the MFMA Learning programme?</font></a></li><br><br>
+<li><a class="BasicText" title="" href="/MFMA/MFMA%20learning/00%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font color="#000000" face="Calibri">Full "About MFMA Learning" document</font></a></li></ul></td></tr></tbody></table></div></font></font></td></tr></tbody></table></div></div>
+				    </td>
+				</tr>
+				<tr>
+					<td valign="top" style="padding:0">
+						<table cellpadding="4" cellspacing="0" border="0" width="100%" height="100%">
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+							<tr>
+								<td width="100%" colspan="3" valign="top" style="padding:0">
+									<table cellpadding="4" cellspacing="0" width="100%" height="100%">
+										<tr>
+											<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+											 </td>
+									                                        <td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+																			 </td>
+										</tr>
+									</table>
+								</td>
+							</tr>							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+							</tr>
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+						</table>
+					</td>
+					<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+					 </td>
+				</tr>
+				<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+		</table>
+
+					</div>
