--- a/Pages/UrbanZone/index.html
+++ b/Pages/UrbanZone/index.html
@@ -5,3 +5,145 @@
   title: Urban Zone}
 
 ---
+<div class="mainContent">
+							
+		<table cellpadding="4" cellspacing="0" border="0" width="97%">
+				<tr>
+				    <td valign="top" style="padding:0" colspan="3" width="100%">
+				        <div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><p><strong></strong><font color="#000000"> </font></p>
+<div>
+<table style="font-family:calibri;font-size:11pt" border="0" width="700" align="justify">
+<tbody>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td><a title="" href="/MFMA/Urban%20Development%20Zones/Gazette%20No.%2029010.pdf" target="_blank"><font color="#000000">Government Gazette No. 29010 - Notice setting out the particulars of the area demarcated by the Municipality of Matjhabeng</font></a></td>
+<td><font color="#000000">(678kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td><a title="" href="/MFMA/Urban%20Development%20Zones/Gazette%20No.%2028795.pdf" target="_blank"><font color="#000000">Government Gazette No. 28795 - Notice setting out the particulars of the area demarcated by the Municipality of Emalahleni</font></a></td>
+<td><font color="#000000">(228kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td><a title="" href="/MFMA/Urban%20Development%20Zones/Gazette%20No.%2027656.pdf" target="_blank"><font color="#000000">Government Gazette No. 27656 - Notice setting out particulars of areas demarcated by Municipalities of Ekurhuleni, Msunduzi, Nelson Mandela and Polokwane </font></a></td>
+<td><font color="#000000">(2,036kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td><a title="" href="/MFMA/Urban%20Development%20Zones/Gazette%20No.%2027077.pdf" target="_blank"><font color="#000000">Government Gazette No. 27077 - Notice setting out particulars of areas demarcated by Municipalities of Ethekwini, Tswane, Emfuleni, Sol Plaatje, Mangaung, Buffalo City and Mbombela...</font></a></td>
+<td><font color="#000000">(1,392kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td><a title="" href="/MFMA/Urban%20Development%20Zones/Gazette%20No.%2026866.pdf" target="_blank"><font color="#000000">Government Gazette No. 26866 - Johannesburg and Cape Town UDZs</font></a></td>
+<td><font color="#000000">(1,857kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td><a title="" href="/MFMA/Urban%20Development%20Zones/Urban%20Renewal%20Tax%20Incentive%20-%20Guide%20for%20Investors.pdf" target="_blank"><font color="#000000">Urban Renewal Tax Incentive - Guide for Investors</font></a></td>
+<td><font color="#000000">(106kb)</font></td></tr></tbody></table><br>
+<table style="font-family:calibri;font-size:11pt" border="0" width="700" align="justify">
+<tbody>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Ekurhuleni%20map%201.jpg" target="_blank"><font color="#000000">Ekurhuleni UDZ map 1</font></a></td>
+<td><font color="#000000">(889kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Ekurhuleni%20map%202.jpg" target="_blank"><font color="#000000">Ekurhuleni UDZ map 2</font></a></td>
+<td><font color="#000000">(643kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Msunduzi%20map.jpg" target="_blank"><font color="#000000">Msunduzi UDZ map</font></a></td>
+<td><font color="#000000">(119kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Nelson%20Mandela%20Map.jpg" target="_blank"><font color="#000000">Nelson Mandela UDZ map</font></a></td>
+<td><font color="#000000">(295kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Polokwane%20map_1.jpg" target="_blank"><font color="#000000">Polokwane map UDZ map</font></a></td>
+<td><font color="#000000">(533kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Joburg%20UDZ%20Map.jpg" target="_blank"><font color="#000000">Johannesburg UDZ map</font></a></td>
+<td><font color="#000000">(62kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/CT%20UDZ%20Map.jpg" target="_blank"><font color="#000000">Cape Town UDZ map</font></a></td>
+<td><font color="#000000">(112kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Bellville%20UDZ%20Map.jpg" target="_blank"><font color="#000000">Belville UDZ map</font></a></td>
+<td><font color="#000000">(114kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Durban%20UDZ%20Map.jpg" target="_blank"><font color="#000000">Proposed Durban UDZ map</font></a></td>
+<td><font color="#000000">(60kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/BuffaloCity_small.jpg" target="_blank"><font color="#000000">Buffalo City UDZ map</font></a></td>
+<td><font color="#000000">(121kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Emfuleni_small.jpg" target="_blank"><font color="#000000">Emfuleni UDZ map</font></a></td>
+<td><font color="#000000">(197kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/eThikwini_small.jpg" target="_blank"><font color="#000000">Ethiwini UDZ map</font></a></td>
+<td><font color="#000000">(171kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Kby%20CBD_small.jpg" target="_blank"><font color="#000000">Kimberley UDZ map</font></a></td>
+<td><font color="#000000">(218kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Managaung_small.jpg" target="_blank"><font color="#000000">Managaung UDZ map</font></a></td>
+<td><font color="#000000">(128kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Nelspruit_small.jpg" target="_blank"><font color="#000000">Nelspruit UDZ map</font></a></td>
+<td><font color="#000000">(199kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/jpg_icon.gif"></font></td>
+<td><a title="" href="/Urban%20Development%20Zones/Tshwane_small.jpg" target="_blank"><font color="#000000">Tshwane UDZ map</font></a></td>
+<td><font color="#000000">(180kb)</font></td></tr></tbody></table><br>
+<p style="font-family:calibri;font-size:11pt" align="justify"><font color="#000000">Cape Town Municipality - </font><a id="ctl00_ContentPlaceHolderMain_HyperLink1" href="http://www.capetown.gov.za/" target="_blank"><font color="#0000ff">http://www.capetown.gov.za</font></a><br><font color="#000000">Johannesburg Municipality - </font><a id="ctl00_ContentPlaceHolderMain_HyperLink2" href="http://www.joburg.org.za/" target="_blank"><font color="#0000ff">http://www.joburg.org.za</font></a><font color="#0000ff"> </font></p></div>
+<p><font color="#000000"> </font></p></div>
+				    </td>
+				</tr>
+				<tr>
+					<td valign="top" style="padding:0">
+						<table cellpadding="4" cellspacing="0" border="0" width="100%" height="100%">
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+							<tr>
+								<td width="100%" colspan="3" valign="top" style="padding:0">
+									<table cellpadding="4" cellspacing="0" width="100%" height="100%">
+										<tr>
+											<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+											 </td>
+									                                        <td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+																			 </td>
+										</tr>
+									</table>
+								</td>
+							</tr>							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+							</tr>
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+						</table>
+					</td>
+					<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+					 </td>
+				</tr>
+				<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+		</table>
+
+					</div>
