--- a/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/index.html
+++ b/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/index.html
@@ -7,3 +7,197 @@
   title: Municipal Regulations On A Standard Chart Of Accounts}
 
 ---
+<div class="mainContent">
+							
+		<table cellpadding="4" cellspacing="0" border="0" width="97%">
+				<tr>
+				    <td valign="top" style="padding:0" colspan="3" width="100%">
+				        <div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><table style="font-size:11pt;height:1012px;font-family:calibri;width:700px" width="700" border="0">
+<tbody>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694"></td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694">      </td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;border-right:0px solid;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/foldernew.gif"></td>
+<td width="694">
+<p><a title="" href="http://www.treasury.gov.za/public/mSCOA%20information%20video.zip"><em>mSCOA Information Video</em></a> </p></td>
+<td width="68">(404mb)</td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694">      </td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"><font color="#000000"><img class="ms-rteCustom-PictureFrame" style="border-top:0px solid;border-right:0px solid;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td width="694"><font color="#000000"><font color="#000000"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/01.%20Municipal%20Regulations%20on%20Standard%20Chart%20of%20Accounts%20Gazette%20No%2037577.pdf" target="_blank"><font color="#000000"><font color="#000000">Government Gazette 37577 dated 22 April 2014: Municipal Regulations on Standard Chart of Accounts </font></font></a></font></font></td>
+<td width="68"><font color="#000000">(2,295kb)</font></td></tr>
+<tr valign="top">
+<td height="16" width="806" colspan="3" align="center">  </td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;border-right:0px solid;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/word_icon.gif"></td>
+<td width="694"><font color="#000000"><font color="#000000"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20LG%20SCOA%20-%20GFS%20Classification%20Framework%20-%20V5%20-%2001%20April%202014.docx" target="_blank"><font color="#000000"><font color="#000000">GFS Classification Framework</font></font></a></font></font></td>
+<td width="68"><font color="#000000">(2,295kb)</font></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694">  </td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"><font color="#000000"></font></td>
+<td width="694"><u><strong>Project Summary Document:</strong></u></td>
+<td width="68"><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;border-right:0px solid;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/word_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/03.%20LG%20SCOA%20-%20PSD%20-%20V5%20-%2001%20April%202014.doc" target="_blank"><font color="#000000">Project Summary Document - V5 - 01 Apr 2014</font></a></td>
+<td width="68"><font color="#000000">(886kb)</font></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694">   </td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694"><strong><u>SCOA Segment Detail - (Version 5.4) Excel Versions:</u></strong></td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/01_Costing%20V5.4%20Final.xls" target="_blank"><font color="#000000">01 - Costing - V5.4 - 3 December 2015</font></a></td>
+<td width="68"><font color="#000000">(160 kb)</font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/02_Function%20V5.4%20Final.xls" target="_blank"><font color="#000000">02 - Function - V5.4 - 3 December 2015</font></a></td>
+<td width="68"><font color="#000000">(290 kb)</font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/03_Fund%20V5.4%20Final.xls"><font color="#000000">03 - Fund - V5.4 - 3 December 2015</font></a></td>
+<td width="68"><font color="#000000">(2,856 kb)</font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/04_Item%20Lbl%20%20V5.4%20%20Final.xls" target="_blank"><font color="#000000">04 - Item Lbl - V5.4 - 3 December 2015</font></a></td>
+<td width="68"><font color="#000000">(27,475kb)</font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/05_Item%20Exp%20V5.4%20Final.xls" target="_blank"><font color="#000000">05 - Item Exp - V5.4 - 3 December 2015</font></a></td>
+<td width="68"><font color="#000000">(14,604kb)</font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/06_Item%20Gains%20and%20Losses%20V5.4%20Final.xls"><font color="#000000">06 - Item Gains and Losses - V5.4 - 3 December 2015</font></a></td>
+<td width="68"><font color="#000000">(391 kb)</font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/07_Item%20Revenue%20V5.4%20Final.xls" target="_blank"><font color="#000000">07 - Item Revenue - V5.4 - 3 December 2015</font></a></td>
+<td width="68"><font color="#000000">(12,817kb)</font></td></tr>
+<tr>
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/08_Project%20V5.4%20Final.xls"><font color="#000000">08 - Project - V5.4 - 3 December 2015</font></a></td>
+<td width="68"><font color="#000000">(724kb)</font></td></tr>
+<tr>
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/09_Regional%20V5.4%20Final.xls"><font color="#000000">09 - Regional - V5.4 - 3 December 2015</font></a></td>
+<td width="68"><font color="#000000">(1,049kb)</font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"> </td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/10_Item%20Assets%20V5.4%20Final.xls"><font color="#000000">10 - Item Assets - V5.4 - 3 December 2015</font></a></td>
+<td width="68"> (36,430kb)</td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694">   </td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"> </td>
+<td width="694"><strong style="font-family:'Times New Roman', serif"><u><span lang="EN-ZA" style="font-size:11pt;font-family:Calibri, sans-serif;color:black">Comment Register:</span></u></strong></td>
+<td width="68"> </td></tr>
+<tr>
+<td width="36" align="center"><img style="border-top:0px solid;height:16px;border-right:0px solid;width:16px;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/excel_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/13.%20LG%20SCOA%20-%20Comment%20Register%20-%2001%20April%202014.xls" target="_blank"><font color="#000000">Comment Register - V5 - 01 Apr 2014</font></a></td>
+<td width="68"><font color="#000000">(1,595kb)</font></td></tr>
+<tr>
+<td width="36" align="center"></td>
+<td width="694"> </td>
+<td width="68"></td></tr>
+<tr>
+<td width="36" align="center"><img style="border-top:0px solid;border-right:0px solid;border-bottom:0px solid;border-left:0px solid" border="0" src="/PublishingImages/word_icon.gif"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/14.%20LG%20SCOA%20-%20Terminology%20List%20-%2001%20April%202014.doc" target="_blank"><font color="#000000">Terminology List - V5 - 01 Apr 2014</font></a></td>
+<td width="68"><font color="#000000">(731kb)</font></td></tr>
+<tr>
+<td width="36" align="center"> </td>
+<td width="694">  </td>
+<td width="68"> </td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694"><u><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Forms/AllItems.aspx?RootFolder=/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/01.%20mSCOA%20Circulars&amp;FolderCTID=&amp;View=%7BC96C9F53-8A90-4584-BDF6-E04838D2AF6B%7D"><u><font color="#000000">01. mSCOA Circulars</font></u></a></u></td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694"><u><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Forms/AllItems.aspx?RootFolder=/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF&amp;FolderCTID=&amp;View=%7BC96C9F53-8A90-4584-BDF6-E04838D2AF6B%7D"><u><font color="#000000">02. mSCOA Integrated Consultative Forums (ICF)</font></u></a></u></td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694"><u><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Forms/AllItems.aspx?RootFolder=/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/03.%20mSCOA%20Training&amp;FolderCTID=&amp;View=%7BC96C9F53-8A90-4584-BDF6-E04838D2AF6B%7D"><u><font color="#000000">03. mSCOA Training</font></u></a></u></td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694"><a title="" href="http://mscoafaq.treasury.gov.za/"><font color="#000000">04. mSCOA FAQ </font></a></td>
+<td width="68"><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><font color="#000000"></font></td>
+<td width="694"><a title="" href="http://scoariskmatrix.treasury.gov.za/"><font color="#000000">05. mSCOA Risk matrix </font></a></td>
+<td width="68"><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td width="36" align="center"><font color="#000000"></font></td>
+<td width="694"><a title="" href="https://lguploadportal.treasury.gov.za/"><font color="#000000">06. Local Government Upload portal</font></a></td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694"><a title="" href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Transversal%20Tender"><font color="#000000">07. Tenders</font></a></td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694"></td>
+<td width="68"></td></tr>
+<tr valign="top">
+<td width="36" align="center"></td>
+<td width="694"></td></tr></tbody></table></div>
+				    </td>
+				</tr>
+				<tr>
+					<td valign="top" style="padding:0">
+						<table cellpadding="4" cellspacing="0" border="0" width="100%" height="100%">
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+							<tr>
+								<td width="100%" colspan="3" valign="top" style="padding:0">
+									<table cellpadding="4" cellspacing="0" width="100%" height="100%">
+										<tr>
+											<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+											 </td>
+									                                        <td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+																			 </td>
+										</tr>
+									</table>
+								</td>
+							</tr>							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+							</tr>
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+						</table>
+					</td>
+					<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+					 </td>
+				</tr>
+				<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+		</table>
+
+					</div>
