--- a/Pages/Links/index.html
+++ b/Pages/Links/index.html
@@ -5,3 +5,64 @@
   title: Links to important websites}
 
 ---
+<div class="mainContent">
+							
+		<table cellpadding="4" cellspacing="0" border="0" width="97%">
+				<tr>
+				    <td valign="top" style="padding:0" colspan="3" width="100%">
+				        <div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><br>
+<table style="font-family:calibri;font-size:11pt" border="0" width="700">
+<tbody>
+<tr valign="top">
+<td align="middle"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/arrow.gif"></td>
+<td><a href="http://www.dplg.gov.za/" target="_blank"><font color="#000000">DPLG</font></a></td>
+<td></td></tr>
+<tr valign="top">
+<td align="middle"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/arrow.gif"></td>
+<td><a href="http://www.salga.net/" target="_blank"><font color="#000000">SALGA</font></a></td>
+<td></td></tr>
+<tr valign="top">
+<td align="middle"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/arrow.gif"></td>
+<td><a href="http://www.demarcation.org.za/"><font color="#000000">Municipal Demarcation Board - Maps</font></a></td>
+<td></td></tr></tbody></table></div>
+				    </td>
+				</tr>
+				<tr>
+					<td valign="top" style="padding:0">
+						<table cellpadding="4" cellspacing="0" border="0" width="100%" height="100%">
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+							<tr>
+								<td width="100%" colspan="3" valign="top" style="padding:0">
+									<table cellpadding="4" cellspacing="0" width="100%" height="100%">
+										<tr>
+											<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+											 </td>
+									                                        <td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+																			 </td>
+										</tr>
+									</table>
+								</td>
+							</tr>							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+							</tr>
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+						</table>
+					</td>
+					<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+					 </td>
+				</tr>
+				<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+		</table>
+
+					</div>
