--- a/Pages/faq/index.html
+++ b/Pages/faq/index.html
@@ -5,3 +5,55 @@
   title: Frequently Asked Questions}
 
 ---
+<div class="mainContent">
+							
+		<table cellpadding="4" cellspacing="0" border="0" width="97%">
+				<tr>
+				    <td valign="top" style="padding:0" colspan="3" width="100%">
+				        <div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><strong><br></strong>
+<table style="font-family:calibri;font-size:11pt" border="0" width="700" align="justify">
+<tbody>
+<tr>
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td><a title="" href="/MFMA/FAQs/FAQ1.pdf" target="_blank"><font color="#000000">FAQ Version 1 : 31 January 2005</font></a></td></tr></tbody></table></div>
+				    </td>
+				</tr>
+				<tr>
+					<td valign="top" style="padding:0">
+						<table cellpadding="4" cellspacing="0" border="0" width="100%" height="100%">
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+							<tr>
+								<td width="100%" colspan="3" valign="top" style="padding:0">
+									<table cellpadding="4" cellspacing="0" width="100%" height="100%">
+										<tr>
+											<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+											 </td>
+									                                        <td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+																			 </td>
+										</tr>
+									</table>
+								</td>
+							</tr>							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+							</tr>
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+						</table>
+					</td>
+					<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+					 </td>
+				</tr>
+				<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+		</table>
+
+					</div>
