--- a/TrainingandValidation/index.html
+++ b/TrainingandValidation/index.html
@@ -5,3 +5,79 @@
   title: Training & Validation}
 
 ---
+<div class="mainContent">
+							
+		<table cellpadding="4" cellspacing="0" border="0" width="97%">
+				<tr>
+				    <td valign="top" style="padding:0" colspan="3" width="100%">
+				        <div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><br>
+<table style="font-family:calibri;font-size:11pt" border="0" width="700" align="justify">
+<tbody>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/TrainingandValidation/reg_gaz"><font color="#000000">Minimum Competency Levels</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/TrainingandValidation/Pages/InternshipProgramme.aspx"><font color="#000000">Internship Programme</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/Pages/MFMALearning.aspx"><font color="#000000">Interactive Multimedia Learning - MFMA</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/pdf16.gif"></font></td>
+<td><a title="" href="/MFMA/Training%20and%20Validation/MFM%20skills%20training%20programme%20Learner%20Guidelines%20And%20Logbook.pdf" target="_blank"><font color="#000000">Learner Guidelines and Logbook</font></a></td>
+<td><font color="#000000">(694kb)</font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/TrainingandValidation/Pages/TrainingProvidersandModules.aspx"><font color="#000000">Training Providers and Modules</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/TrainingandValidation/Pages/UnitStandardsSAQALevels5and6.aspx"><font color="#000000">Unit Standards SAQA Levels 5 and 6</font></a></td>
+<td><font color="#000000"></font></td></tr>
+<tr valign="top">
+<td align="middle"><font color="#000000"><img style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" border="0" src="/PublishingImages/Folder.jpg"></font></td>
+<td><a title="" href="/TrainingandValidation/Pages/Links.aspx"><font color="#000000">Links</font></a></td></tr></tbody></table></div>
+				    </td>
+				</tr>
+				<tr>
+					<td valign="top" style="padding:0">
+						<table cellpadding="4" cellspacing="0" border="0" width="100%" height="100%">
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+							<tr>
+								<td width="100%" colspan="3" valign="top" style="padding:0">
+									<table cellpadding="4" cellspacing="0" width="100%" height="100%">
+										<tr>
+											<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+											 </td>
+									                                        <td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top"> 
+																			 </td>
+										</tr>
+									</table>
+								</td>
+							</tr>							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+								 </td>
+							</tr>
+							<tr>
+								<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" colspan="3" valign="top"> 
+								 </td>
+							</tr>
+						</table>
+					</td>
+					<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top" height="100%"> 
+					 </td>
+				</tr>
+				<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+		</table>
+
+					</div>
